--- a/styles/PizzaCard.module.css
+++ b/styles/PizzaCard.module.css
@@ -1,5 +1,5 @@
 .container{
-    width: 33%;
+    width: 30%;
     color:blue;
     padding: 10px;
     display: flex;
@@ -7,6 +7,11 @@
     flex-direction: column;
     justify-content: center;
     padding: 20px 40px;
-    height: 300px;
+    height: 20vw;
+    background-color: rgb(212, 212, 212);
+    margin: 1%;
    
+}
+.container:hover{
+    background-color: rgb(94, 94, 94);
 }
