--- a/styles/product.module.css
+++ b/styles/product.module.css
@@ -6,6 +6,9 @@
 .left{
     flex:1;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .right{
@@ -14,4 +17,6 @@
 
 .imgcontainer{
     width: 80%;
+    height: 80%;
+    position:relative;
 }
