--- a/styles/product.module.css
+++ b/styles/product.module.css
@@ -1,8 +1,13 @@
 .container{
     height: calc(100vh - 100px);
     display: flex;
+    
 }
-
+@media only screen and (max-width: 600px) {
+    .container{
+      flex-direction: column;
+    }
+  }
 .left{
     flex:1;
     height: 100%;
@@ -11,12 +16,79 @@
     justify-content: center;
 }
 
+
 .right{
     flex:1;
+    padding: 20px;
+    background-color: rgb(219, 219, 219);
+   
 }
 
 .imgcontainer{
     width: 80%;
     height: 80%;
     position:relative;
+}
+.price{
+    color:red;
+    font-size:24px;
+    font-weight: 400px;
+    border-bottom: 1px solid red ;
+}
+.sizes{
+    display: flex;
+    width:100%;
+    flex-wrap: wrap;
+}
+.size{
+    font-size:18px;
+    width: calc(20% + 10px);
+    min-width: 200px;
+    height: 35px;
+    position:relative;
+    background-color: rgb(189, 91, 91);
+    padding: 5px;
+    margin: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
+    color:white;
+    border-radius: 100px ;
+    text-align: center;
+    text-justify: center;
+    cursor: pointer;
+    white-space: nowrap;
+}
+.size:hover{
+    background-color: rgb(128, 0, 0);
+}
+.size:active{
+    background-color: rgb(128, 0, 0);
+}
+.ingredients{
+display: flex;
+margin-bottom: 30px;
+}
+.option{
+    display: flex;
+    align-items: center;
+    margin-right:10px ;
+    font-size: 14px;
+    font-weight: 500;
+}
+.checkbox{
+    width: 20px;
+    height: 20px;
+}
+.quantity{
+width: 50px;
+height: 30px;
+}
+.button{
+    height: 30px;
+    margin-left: 10px;
+    background-color: rgb(131, 0, 0);
+    color:white;
+    border: none;
+    font-weight: 500;
+    cursor: pointer; 
 }
