--- a/styles/product.module.css
+++ b/styles/product.module.css
@@ -1,26 +1,31 @@
 .container{
-    height: calc(100vh - 100px);
+    height: calc(100vh - 60px);
     display: flex;
-    
+  
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
     .container{
       flex-direction: column;
+      height: calc(130vh - 60px);
     }
+    
   }
 .left{
+    background-color: #F5F5F7;
     flex:1;
     height: 100%;
+    min-width:500px ;
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 
 .right{
     flex:1;
     padding: 20px;
-    background-color: rgb(219, 219, 219);
+    background-color:#e8e8e9;
    
 }
 
@@ -29,24 +34,67 @@
     height: 80%;
     position:relative;
 }
+.title{
+    padding-left: 10px;
+    font-size:48px;
+    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+}
+@media only screen and (max-width: 800px) {
+    .title{
+        padding-left: 5px;
+        font-size:35px;
+        font-weight: 800;
+    }
+    .price{
+        
+        font-size:30px;
+       
+    }
+  }
 .price{
-    color:red;
-    font-size:24px;
-    font-weight: 400px;
-    border-bottom: 1px solid red ;
+    color:rgb(255, 32, 32);
+    font-size:40px;
+    font-weight: 800;
+    border-bottom: 3px solid rgb(255, 32, 32);
+    margin-left: 20px;
+    
+}
+.desc{
+    margin-left: 20px;
+   
+}
+@media only screen and (max-width: 800px) {
+    .title{
+        padding-left: 5px;
+        font-size:35px;
+        font-weight: 800;
+    }
+    .price{
+        padding: 0;
+        font-size:30px;
+       
+    }
+  }
+.choose{
+    padding-left: 10px;
+    font-size:25px;
+    font-weight: 700;
+    color:rgb(77, 77, 77)
 }
 .sizes{
+    
     display: flex;
     width:100%;
     flex-wrap: wrap;
 }
 .size{
     font-size:18px;
-    width: calc(20% + 10px);
+    width: calc(5% + 10px);
     min-width: 200px;
-    height: 35px;
+    height: 40px;
     position:relative;
-    background-color: rgb(189, 91, 91);
+    background-color: rgb(0, 113, 227);
     padding: 5px;
     margin: 10px;
     margin-left: 30px;
@@ -55,40 +103,65 @@
     border-radius: 100px ;
     text-align: center;
     text-justify: center;
+    padding-top: 9px;
     cursor: pointer;
     white-space: nowrap;
+    transition: all 0.3s;
+   
 }
 .size:hover{
-    background-color: rgb(128, 0, 0);
+    transition: all 0.4s;
+    background-color: #0077ED;
 }
-.size:active{
-    background-color: rgb(128, 0, 0);
-}
+
 .ingredients{
+    margin-left: 40px;
 display: flex;
 margin-bottom: 30px;
+flex-wrap: wrap;
 }
 .option{
+    font-family: 'Poppins', sans-serif;
     display: flex;
     align-items: center;
     margin-right:10px ;
-    font-size: 14px;
-    font-weight: 500;
+    
+    font-size: 16px;
+    font-weight: 600;
 }
 .checkbox{
+    margin-right:5px ;
     width: 20px;
     height: 20px;
 }
 .quantity{
-width: 50px;
-height: 30px;
+width: 60px;
+height: 40px;
+font-size: 16px;
+font-weight: 700;
+border-radius: 20px;
+text-align: center;
+border: none;
+margin-right: 10px;
+padding-left: 15px;
+padding-right: 2px;
 }
 .button{
-    height: 30px;
+    font-family: 'Poppins', sans-serif;
+    height: 40px;
+    font-size: 15px;
+    font-weight: 500;
     margin-left: 10px;
-    background-color: rgb(131, 0, 0);
+    background-color: rgb(0, 113, 227);
     color:white;
     border: none;
-    font-weight: 500;
     cursor: pointer; 
+    border-radius: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+    transition: all 0.3s;
+}
+.button:hover{
+    background-color: #0077ED;
+    transition: all 0.3s;
 }
