--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -38,7 +38,8 @@
     flex-direction: column;
     justify-content: space-between;
     color:#1D1D1F;
-    border-radius: 12px
+    border-radius: 12px;
+ 
 }
 
 .button{
