--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -17,6 +17,7 @@
 .table{
     width: 100%;
     border-spacing: 20px;
+    
 }
 .name{
     font-weight: 500;
@@ -39,23 +40,33 @@
     justify-content: space-between;
     color:#1D1D1F;
     border-radius: 12px;
- 
+    min-width: 300px;
 }
 
 .button{
     background-color: rgb(0, 113, 227);
     color:#F4F9FE;
     font-size: 17px;
-    font-weight: 400;
+    font-weight: 500;
     border-radius: 8px;
     height: 50px;
     border: none;
-    width:100%;
+    width:90%;
     min-width: 28px;
     margin-top: 10px;
     margin-left: 20px;
     margin-right: 20px;
+    align-items: center;
+    margin: 15px;
+    cursor: pointer;
+        
 }
 .button:hover{
     background-color: #0077ED;
+}
+.totalTextTitle{
+    margin: 5px;
+}
+.totalText{
+    margin: 4px;
 }
