--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,3 +16,19 @@ a {
 * {
   box-sizing: border-box;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #F5F5F7;
+  -webkit-border-radius: 10px;
+  border-radius: 0px;
+  background-image: -webkit-linear-gradient(270deg, #1D1D1D 60px,transparent 60px)
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #1D1D1D; 
+}
